--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "ClickDs\\AppPurchaseNotifications\\": "src/"
+            "ClickDs\\AppPurchaseNotifications\\": "src/",
+            "ClickDs\\AppPurchaseNotifications\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
