--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,10 @@ jobs:
         strategy:
             matrix:
                 php: [7.4, 8.0]
-                laravel: [7.*, 8.*]
+                laravel: [8.*]
                 dependency-version: [prefer-stable]
                 os: [ubuntu-latest, windows-latest]
                 include:
-                    - laravel: 7.*
-                      testbench: 5.*
                     - laravel: 8.*
                       testbench: 6.*
 
